# Happy-Typeless

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: emotion_words.txt
config/en/: connector_words.txt  filler_words.txt  question_patterns.txt  stopwords.txt  topic_keywords.txt
config/zh/: connector_words.txt  filler_words.txt  question_patterns.txt  stopwords.txt  topic_keywords.txt
data/examples/: README.md  typeless_export_example.json
docs/: CODEX.md
docs/zh/: README.md
output/examples/: README.md  Typeless_Report_Example.html  Typeless_Report_Example_en.html  Typeless_Report_Example_zh.html
src/: cli.py  config.py  translations.py
src/ai/: analyzer.py  base.py  cache.py  client.py  fixtures.py  prompts.py
src/factories/: repository_factory.py
src/main/: __init__.py  generator.py
src/main/templates/: report.html.j2
src/models/: ai_analysis.py  analysis.py  errors.py  transcription.py
src/nlp/: factory.py
src/nlp/strategies/: __init__.py  analysis.py  segment.py  segment_en.py  segment_zh.py
src/repositories/: base.py  json_repository.py  mock_repository.py
src/services/: ai_insights.py  app_usage.py  content_analysis.py  efficiency.py  emotion_deep.py  overview.py  time_trends.py  usage_habits.py
tests/: conftest.py
tests/integration/: test_full_flow.py
tests/unit/: test_config.py
tests/unit/ai/: test_analyzer.py  test_cache.py  test_client.py  test_prompts.py
tests/unit/factories/: test_repository_factory.py
tests/unit/models/: test_ai_analysis.py  test_analysis.py  test_errors.py  (+1 more)
(+13 files in other folders)
