[project]
name = "happy-typeless"
version = "2.0.0"
description = "Typeless 语音数据分析器"
requires-python = ">=3.12"
authors = [
    {name = "Owen Lee"}
]

dependencies = [
    # AI core
    "openai>=1.0.0",
    "instructor>=1.0.0",
    "tenacity>=8.0.0",
    "anthropic>=0.25.0",
    # Data processing
    "jieba>=0.42.0",
    # NLP (segmentation only)
    "spacy>=3.8.0",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    # Core framework
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # CLI
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx[socks]>=0.28.1",
]


[project.scripts]
typeless = "src.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]
